// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders welcome a secondary color 1`] = `
.c0 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #acacac;
  border-bottom-color: #898989;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover,
.c0:focus {
  background: #898989;
  border-bottom-color: #acacac;
}

<div>
  <button
    class="c0"
  >
    Welcome to React
  </button>
</div>
`;

exports[`<Button /> renders welcome message 1`] = `
.c0 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover,
.c0:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

<div>
  <button
    class="c0"
  >
    Welcome to React
  </button>
</div>
`;
